chore(mixins): упрощение миксинов

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,17 +1,8 @@
 @mixin option($n, $v, $vm: $v, $vt: $vm) {
-  @include DESKTOP {
-    #{$n}: $v;
-  }
-  @include TABLET-L {
-    #{$n}: $v;
-  }
-  @include MOBILE {
-    #{$n}: $vm;
-  }
-  @include TABLET {
-    #{$n}: $vt;
-  }
+  @include option-desk($n, $v);
+  @include option-mob($n, $vm, $vt: $vm);
 }
+
 @mixin option-mob($n, $vm, $vt: $vm){
   @include MOBILE{
     #{$n}:($vm);
