--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -5,4 +5,11 @@
           'sidebar page';
   grid-template-columns: 1fr 9fr;
   grid-template-rows: 1fr 9fr;
+  width: 100%;
+  min-height: 100%;
+
+  img {
+    display: block;
+    height: 100%;
+  }
 }
