feat(): роутинг страниц

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,4 +1,11 @@
 .sidebar {
   grid-area: sidebar;
   background: darksalmon;
+  @include option(padding, $P);
+
+  &__item {
+    &:not(&:last-of-type) {
+      @include option(margin, 0 0 20);
+    }
+  }
 }
