--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -2,8 +2,20 @@
  * breakpoints
  */
 
-$P: 20;
 
+
+$P: 30;
+
+/**
+ * COLORS
+ */
+$WHITE: #ffffff;
+$BLACK: #000000;
+
+
+/**
+ * OTHER
+ */
 $MOBILE: 320px;
 $TABLET: 768px;
 $TABLET-L: 1024px;
