--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -6,9 +6,13 @@
   grid-template-columns: 1fr 9fr;
   width: 100%;
   min-height: 100%;
+  font-family: "OpenSans", Helvetica, sans-serif;
 
   img {
     display: block;
     height: 100%;
   }
+
+
+
 }
