feat(): написание адаптива

--- a/src/components/PageDialogs/Dialog/Dialog.scss
+++ b/src/components/PageDialogs/Dialog/Dialog.scss
@@ -1,6 +1,7 @@
 .dialog {
   display: inline-block;
-  @include option(padding, 20px 0);
+  @include option(padding-top, 20px);
+  @include option(padding-bottom, 20px);
   font-variation-settings: "wght" 500;
   text-decoration: none;
   color: $BLACK;
