--- a/src/components/baseComponents/gui/Header/Header.scss
+++ b/src/components/baseComponents/gui/Header/Header.scss
@@ -13,8 +13,8 @@
     span {
       display: flex;
       justify-content: center;
-      @include option(width, 32*1.2);
-      @include option(height, 32*1.2);
+      @include option(width, 38);
+      @include option(height, 38);
       background: #29477e;
     }
   }
