--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import '_reset';
 @import '_constants';
 @import '_adaptive';
+@import '_functions';
 @import '_mixins';
 @import "./../fonts/fonts.css";
 
