--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -5,7 +5,7 @@
 
   &__item {
     &:not(&:last-of-type) {
-      @include option(margin, 0 0 20);
+      @include option(margin-bottom, 20);
     }
   }
 
