chore(): позиционирование страницы

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,7 +3,8 @@
   grid-template-areas:
           'header header'
           'sidebar page';
-  grid-template-columns: 1fr 9fr;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: auto 1fr;
   width: 100%;
   min-height: 100%;
   font-family: "OpenSans", Helvetica, sans-serif;
@@ -15,4 +16,8 @@
 
 
 
+}
+
+body,#root {
+  height: 100%;
 }
