feat(Writer, Button): добавлено текстовое поле, чтобы писать на стене

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,8 @@
 
 //Gui
 @import "../components/baseComponents/gui/Header/Header";
+@import "../components/baseComponents/gui/Button/Button";
+@import "../components/baseComponents/gui/Writer/Writer";
 
 //Components
 @import "../components/App/App";
