--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -12,9 +12,12 @@ $P: 30;
 /**
  * COLORS
  */
+$BG: #edeef0;
+$GRAY: #e1e1e1;
 $WHITE: #ffffff;
 $BLACK: #000000;
 $BLUE: #29477e;
+//$BLUE-BG: #f5f5f5;
 
 
 /**
