--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,23 +1,27 @@
 .app {
-  display: grid;
-  grid-template-areas:
-          'header header'
-          'sidebar page';
-  grid-template-rows: auto 1fr;
-  grid-template-columns: auto 1fr;
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   font-family: "OpenSans", Helvetica, sans-serif;
-
+  background: #edeef0;
+  overflow: hidden;
+  &__layout {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+  }
   img {
     display: block;
     height: 100%;
   }
-
-
-
 }
 
 body,#root {
   height: 100%;
+}
+
+a {
+  -webkit-user-select: none;
+  user-select: none;
 }
