feat(PageProfile ,User): добавлена инфа о пользователе

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -9,7 +9,7 @@
   &__layout {
     display: flex;
     justify-content: center;
-    flex-grow: 1;
+    height: 90%;
   }
   img {
     display: block;
