chore(PageDialogs, Dialog): открытие сообщений по пользователю

--- a/src/components/PageDialogs/Dialog/Dialog.scss
+++ b/src/components/PageDialogs/Dialog/Dialog.scss
@@ -5,6 +5,7 @@
   font-variation-settings: "wght" 500;
   text-decoration: none;
   color: $BLACK;
+  transition: .3s ease-in-out;
 
   &_active {
     color: $BLUE;
