--- a/src/components/PageDialogs/PageDialogs.scss
+++ b/src/components/PageDialogs/PageDialogs.scss
@@ -11,11 +11,32 @@
     flex-direction: column;
   }
 
-  &__messages {
-    @include option(padding-left, $P);
-    @include option(padding-right, $P);
+  &__wall {
+    width: 100%;
+    @include option(height, 500);
     @include option(border-width, 2);
     border: solid gray;
+  }
+
+  &__messages {
+    width: 100%;
+    height: 100%;
+    @include option(padding-left, $P);
+    @include option(padding-right, $P);
+    box-sizing: border-box;
+    &-enter {
+      opacity: 0;
+    }
+    &-enter-active,
+    &-enter-done,
+    &-exit {
+      opacity: 1;
+      transition: .3s ease-in-out;
+    }
+    &-exit-active {
+      opacity: 0;
+      transition: .3s ease-in-out;
+    }
   }
 
 }
