--- a/src/components/PageDialogs/Dialog/Dialog.scss
+++ b/src/components/PageDialogs/Dialog/Dialog.scss
@@ -1,13 +1,15 @@
 .dialog {
   display: inline-block;
-  @include option(padding-top, 20px);
-  @include option(padding-bottom, 20px);
+  @include option(margin, 20 0);
+  @include option(padding, $P / 2 $P);
   font-variation-settings: "wght" 500;
   text-decoration: none;
   color: $BLACK;
-  transition: .3s ease-in-out;
-
+  background: transparent;
+  transition: .5s ease-in-out;
+  box-sizing: border-box;
   &_active {
+    background: rgba($BLUE, .2);
     color: $BLUE;
   }
 }
