--- a/src/components/PageDialogs/PageDialogs.scss
+++ b/src/components/PageDialogs/PageDialogs.scss
@@ -20,8 +20,7 @@
   &__messages {
     width: 100%;
     height: 100%;
-    @include option(padding-left, $P);
-    @include option(padding-right, $P);
+    @include option(padding, $P $P/3 $P $P);
     @include option(border-width, 2);
     border: solid gray;
     box-sizing: border-box;
