--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -17,6 +17,7 @@ $GRAY: #e1e1e1;
 $WHITE: #ffffff;
 $BLACK: #000000;
 $BLUE: #29477e;
+$BLUE-L: #a0b8e6;
 
 $GRAY-TEXT: #6D7885;
 //$BLUE-BG: #f5f5f5;
